force-app/main/default/objects/Opportunity/fields/Lost_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Description__c</fullName>
    <label>Lost Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>