force-app/main/default/objects/Opportunity/fields/Quote_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Submission_Date__c</fullName>
    <label>Quote Submission Date</label>
    <type>Date</type>
</CustomField>