force-app/main/default/objects/Opportunity/fields/Source_Link__c.field-meta.xml
<CustomField>
    <fullName>Source_Link__c</fullName>
    <label>Source Link</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>