force-app/main/default/objects/Opportunity/recordTypes/Competitive_Quote.recordType-meta.xml
<RecordType>
    <fullName>Competitive_Quote</fullName>
    <active>true</active>
    <businessProcess>Competitive Quote</businessProcess>
    <label>Competitive Quote</label>
</RecordType>