force-app/main/default/objects/Opportunity/recordTypes/Single_Source_Quote.recordType-meta.xml
<RecordType>
    <fullName>Single_Source_Quote</fullName>
    <active>true</active>
    <businessProcess>Single Source Quote</businessProcess>
    <label>Single Source Quote</label>
</RecordType>