force-app/main/default/objects/Opportunity/validationRules/Lost_reason_provided.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_reason_provided</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Lost_Reason_Description__c) &amp;&amp;
TEXT(StageName) = &apos;Closed Lost&apos; &amp;&amp;
TEXT(Lost_Reason__c) = &apos;Other&apos;</errorConditionFormula>
    <errorDisplayField>Lost_Reason_Description__c</errorDisplayField>
    <errorMessage>Provide a reason</errorMessage>
</ValidationRule>